--- a/wookie/src/components/Card/Card.module.css
+++ b/wookie/src/components/Card/Card.module.css
@@ -1,9 +1,9 @@
 .card_container {
   height: 300px;
   width: 180px;
-  border: 0.1px solid white;
+  border: 0.1px solid var(--color-primary);
   border-radius: 10px;
-  margin: 8px 4px;
+  margin: 12px 8px;
 }
 
 .img {
@@ -13,6 +13,13 @@
   object-fit: cover;
   border-radius: 10px;
   z-index: 2;
+}
+
+.img:hover {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s;
+  transform: scale(1.05);
 }
 
 .card_title {
