--- a/wookie/src/components/NavBar/NavBar.module.css
+++ b/wookie/src/components/NavBar/NavBar.module.css
@@ -3,5 +3,6 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-
+  background-color: var(--color-background);
+  box-shadow: 0px 4px 6px -1px var(--color-background);
 }
