--- a/wookie/src/components/Section/Section.module.css
+++ b/wookie/src/components/Section/Section.module.css
@@ -1,10 +1,16 @@
 .main_container {
+  background-color: var(--color-primary);
+  margin: 10px;
 }
 
 .movie_container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.genre__title {
+  color: var(--color-seconday);
 }
